// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderer/components/notifications/NotificationTitle.tsx should apply truncate className when wrapNotificationTitle is false 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <span
        class="truncate prc-Text-Text-9mHv3"
      >
        <span
          class="prc-Text-Text-9mHv3"
        >
          refactor: migrate deprecated atlaskit 
        </span>
        <span
          class="px-1 py-0.5 rounded bg-gitify-notification-hover font-mono text-xs prc-Text-Text-9mHv3"
        >
          xcss
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`renderer/components/notifications/NotificationTitle.tsx should not apply truncate className when wrapNotificationTitle is true 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <span
        class="prc-Text-Text-9mHv3"
      >
        <span
          class="prc-Text-Text-9mHv3"
        >
          refactor: migrate deprecated atlaskit 
        </span>
        <span
          class="px-1 py-0.5 rounded bg-gitify-notification-hover font-mono text-xs prc-Text-Text-9mHv3"
        >
          xcss
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`renderer/components/notifications/NotificationTitle.tsx should render plain text without code blocks 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <span
        class="truncate prc-Text-Text-9mHv3"
      >
        <span
          class="prc-Text-Text-9mHv3"
        >
          Simple notification title
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`renderer/components/notifications/NotificationTitle.tsx should render text with code block at the end 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <span
        class="truncate prc-Text-Text-9mHv3"
      >
        <span
          class="prc-Text-Text-9mHv3"
        >
          Fix issue with 
        </span>
        <span
          class="px-1 py-0.5 rounded bg-gitify-notification-hover font-mono text-xs prc-Text-Text-9mHv3"
        >
          render
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`renderer/components/notifications/NotificationTitle.tsx should render text with code block at the start 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <span
        class="truncate prc-Text-Text-9mHv3"
      >
        <span
          class="px-1 py-0.5 rounded bg-gitify-notification-hover font-mono text-xs prc-Text-Text-9mHv3"
        >
          useState
        </span>
        <span
          class="prc-Text-Text-9mHv3"
        >
           hook implementation
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`renderer/components/notifications/NotificationTitle.tsx should render text with multiple inline code blocks 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <span
        class="truncate prc-Text-Text-9mHv3"
      >
        <span
          class="prc-Text-Text-9mHv3"
        >
          Replace 
        </span>
        <span
          class="px-1 py-0.5 rounded bg-gitify-notification-hover font-mono text-xs prc-Text-Text-9mHv3"
        >
          foo
        </span>
        <span
          class="prc-Text-Text-9mHv3"
        >
           with 
        </span>
        <span
          class="px-1 py-0.5 rounded bg-gitify-notification-hover font-mono text-xs prc-Text-Text-9mHv3"
        >
          bar
        </span>
        <span
          class="prc-Text-Text-9mHv3"
        >
           in config
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`renderer/components/notifications/NotificationTitle.tsx should render text with single inline code block 1`] = `
<div>
  <div
    data-color-mode="light"
    data-dark-theme="dark"
    data-light-theme="light"
  >
    <div
      class="prc-src-BaseStyles-aopSS"
      data-portal-root="true"
    >
      <span
        class="truncate prc-Text-Text-9mHv3"
      >
        <span
          class="prc-Text-Text-9mHv3"
        >
          refactor: migrate deprecated atlaskit 
        </span>
        <span
          class="px-1 py-0.5 rounded bg-gitify-notification-hover font-mono text-xs prc-Text-Text-9mHv3"
        >
          xcss
        </span>
      </span>
    </div>
  </div>
</div>
`;
